Update links in markdown file

--- a/_posts/2024-03-07-001.md
+++ b/_posts/2024-03-07-001.md
@@ -5,7 +5,7 @@ date:   2024-03-07 17:40
 categories: 學校
 ---
 
-**[2024年陳永泰公益信託「傳善論文獎」 (link is external)](https://www.auroratrust.org.tw/?page=news&id=20&aid=488#list)(7/1-7/14止)**
+**[2024年陳永泰公益信託「傳善論文獎」](https://www.auroratrust.org.tw/?page=news&id=20&aid=488#list)(7/1-7/14止)**
 
 **一、 申請資格**
 
@@ -43,7 +43,7 @@ categories: 學校
 
   
 輔仁大學社會創新與非營利組織研究中心  
-網站：http：//[innovation.npo.fju.edu.tw (link is external)](http://innovation.npo.fju.edu.tw/)  
+網站：http：//[innovation.npo.fju.edu.tw](http://innovation.npo.fju.edu.tw/)  
 Email：[157241@mail.fju.edu.tw (link sends e-mail)](mailto:157241@mail.fju.edu.tw)  
 電話：（02）2905-2774  
-FB搜尋：[傳善論文獎 (link is external)](https://www.facebook.com/profile.php?id=61551192475179&locale=zh_TW)
+FB搜尋：[傳善論文獎](https://www.facebook.com/profile.php?id=61551192475179&locale=zh_TW)
