Fix bug in login functionality

--- a/pages/關於學會/學會組織.md
+++ b/pages/關於學會/學會組織.md
@@ -3,3 +3,16 @@ layout: pages
 title:  學會組織
 permalink: /about/學會組織
 ---
+#### 本會以會員(會員代表)大會為最高權力機構，會員(會員代表)大會閉會期間由理事會代行職權；監事會為監察機構。理事會理事長對內綜理督導會務，對外代表學會，並擔任會員(會員代表)大會、理事會主席。本會置秘書長一人，處理本會事務。
+>理事長：蕭瑞祥（淡江大學資訊管理學系 教授兼總務長）
+<br>
+總理與督導會務，同時代表學會擔任會員大會、理事會主席。
+<br>
+>秘書長：鄭哲斌（淡江大學資訊管理學系 副教授）
+<br>
+監督及處理學會人事行政及會計事務。
+<br>
+>專員：楊先生、林小姐
+<br>
+>聯絡方式：02-26215656 分機 2228
+E-mail：<a href="mailto:csim.service@gmail.com">csim.service@gmail.com</a>
