Update board members' titles and headings

--- a/pages/關於學會/監理事會.md
+++ b/pages/關於學會/監理事會.md
@@ -3,11 +3,11 @@ layout: pages
 title:  "監理事會"
 permalink: /about/監理事會
 ---
-## 第十八屆理監事名單
+### 第十八屆理監事名單
 
 > 中華民國資訊管理學會第十八屆理監事委員會   
   
-### 理事長
+#### 理事長
 
 <table class="table">
   <thead>
@@ -26,7 +26,7 @@ permalink: /about/監理事會
   </tbody>
 </table>
 
-### 常務理事 (6席)
+#### 常務理事 (6席)
 
 <table class="table">
   <thead>
@@ -71,7 +71,7 @@ permalink: /about/監理事會
 </table>
 
   
-## 常務監事 (1席) 
+#### 常務監事 (1席) 
 
 <table class="table">
   <thead>
@@ -91,7 +91,7 @@ permalink: /about/監理事會
 </table>
 
 
-## 理事 (14席) 
+#### 理事 (14席) 
 
 <table class="table">
   <thead>
@@ -176,7 +176,7 @@ permalink: /about/監理事會
 </table>
 
 
-## 監事 (6席) 
+#### 監事 (6席) 
 
 <table class="table">
   <thead>
@@ -221,7 +221,7 @@ permalink: /about/監理事會
 </table>
 
 
-## 候補理事 (7席) 
+#### 候補理事 (7席) 
 
 <table class="table">
   <thead>
@@ -271,7 +271,7 @@ permalink: /about/監理事會
 </table>
 
 
-## 候補監事 (2席) 
+#### 候補監事 (2席) 
 
 <table class="table">
   <thead>
