Update categories and layout styles

--- a/_posts/2014-08-20-001.md
+++ b/_posts/2014-08-20-001.md
@@ -2,7 +2,7 @@
 layout: posts
 title:  "Drupal跨界整合之社群大會即將開跑"
 date:   2014-08-20 11:01
-categories: 業界
+categories: "業界"
 ---
 
 現代人都知道各式網站和平台就存在於我們生活之中，而台灣有一群熱情的人們正努力推動與分享Drupal一個能夠幫助我們帶來更高生活品質的工具，試圖打造更加便利及充實的未來！近期，人氣不停高升的Drupal社群即將在8月29日、30日舉辦第五屆Drupal Camp Taipei交流大會，向有興趣的大眾分享Drupal在各領域的導入經驗與未來發展。
