Update department name in post files

--- a/_posts/2013-11-29-260.md
+++ b/_posts/2013-11-29-260.md
@@ -58,10 +58,10 @@ http://icim2014.mis.nchu.edu.tw/Date: May 24, 2014. Venue: National Chung Hsing 
 
 承辦單位：
 
-● 國立中興大學資訊管理學會           ● 中臺科技大學管理學院
+● 國立中興大學資訊管理學系           ● 中臺科技大學管理學院
 
 合辦單位：
 
 ● 國立中興大學科技管理研究所        ● 中州科技大學資訊管理系        ● 國立中興大學磐石中心             
 
-● 朝陽科技大學資訊學院                 ● 國立勤益科技大學管理學院      ● 嶺東科技大學資訊管理系   ● 國立聯合大學資訊管理學會      
+● 朝陽科技大學資訊學院                 ● 國立勤益科技大學管理學院      ● 嶺東科技大學資訊管理系   ● 國立聯合大學資訊管理學系      
