--- a/_posts/2013-12-29-264.md
+++ b/_posts/2013-12-29-264.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "國立聯合大學資訊管理學會誠徵約聘教師一名"
+title: "國立聯合大學資訊管理學系誠徵約聘教師一名"
 date: 2013-12-29 09:03
 categories: 學校
 author: Vincent Chen
 ---
 
-國立聯合大學資訊管理學會　　　誠徵約聘教師一名
+國立聯合大學資訊管理學系　　　誠徵約聘教師一名
 
  
 
@@ -56,6 +56,6 @@ author: Vincent Chen
 
 本系徵才網站：http://www.im.nuu.edu.tw。
 
-寄送地址：36003苗栗市恭敬里聯大一號/國立聯合大學 資訊管理學會 楊宗珂系主任收(請註明應徵約聘教師)
+寄送地址：36003苗栗市恭敬里聯大一號/國立聯合大學 資訊管理學系 楊宗珂系主任收(請註明應徵約聘教師)
 
 聯絡人：楊宗珂主任、許惠雯小姐 聯絡電話：037-381820、037-381821
