--- a/_posts/2014-07-25-8080.md
+++ b/_posts/2014-07-25-8080.md
@@ -42,4 +42,4 @@ author: editor
 
  
 
-龍華科技大學資訊管理學會 副教授兼資訊管理系(所)主任 林國平 Kuo-Ping Lin Associate professor, IEEE Senior member  Chairman, Department of Information Management Lunghwa University of Science and Technology Phone: +886-2-82093211 ext.6300 E-mail:kplin@mail.lhu.edu.tw
+龍華科技大學資訊管理學系 副教授兼資訊管理系(所)主任 林國平 Kuo-Ping Lin Associate professor, IEEE Senior member  Chairman, Department of Information Management Lunghwa University of Science and Technology Phone: +886-2-82093211 ext.6300 E-mail:kplin@mail.lhu.edu.tw
