--- a/_posts/2015-12-23-8099.md
+++ b/_posts/2015-12-23-8099.md
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title: "成功大學工業與資訊管理學會新聘專任教師公告"
+title: "成功大學工業與資訊管理學系新聘專任教師公告"
 date: 2015-12-23 08:06
 categories: 學校
 author: editor
