--- a/_posts/2016-02-22-8101.md
+++ b/_posts/2016-02-22-8101.md
@@ -6,7 +6,7 @@ categories: 資訊管理學會
 author: editor
 ---
 
-2016第二十七屆國際資訊管理學術研討會(2016 ICIM)由靜宜大學資訊管理學會承辦
+2016第二十七屆國際資訊管理學術研討會(2016 ICIM)由靜宜大學資訊管理學系承辦
 
 研討會即日起開始徵稿，竭誠邀請您的投稿與支持。
 
