--- a/_posts/2017-05-31-8121.md
+++ b/_posts/2017-05-31-8121.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "中國文化大學資訊管理學會徵聘專任教師啟事"
+title: "中國文化大學資訊管理學系徵聘專任教師啟事"
 date: 2017-05-31 23:11
 categories: 學校
 author: csim
 ---
 
-中國文化大學資訊管理學會徵聘專任教師: 
+中國文化大學資訊管理學系徵聘專任教師: 
 
 一、徵聘職級：助理教授以上專任教師
 
