--- a/_posts/2017-07-26-8123.md
+++ b/_posts/2017-07-26-8123.md
@@ -92,7 +92,7 @@ U、其他資訊技術與管理相關議題等
 
 主辦單位：中華民國資訊管理學會
 
-承辦單位：國立聯合大學資訊管理學會
+承辦單位：國立聯合大學資訊管理學系
 
 聯絡資訊：im@nuu.edu.tw(link sends e-mail)  (037) 381501 or 381502
 
