--- a/_posts/2017-11-04-8128.md
+++ b/_posts/2017-11-04-8128.md
@@ -1,16 +1,16 @@
 ---
 layout: posts
-title: "國立成功大學公開徵求工業與資訊管理學會系主任暨資訊管理研究所所長候選人啟事"
+title: "國立成功大學公開徵求工業與資訊管理學系系主任暨資訊管理研究所所長候選人啟事"
 date: 2017-11-04 12:16
 categories: 學校
 author: csim
 ---
 
-主旨：國立成功大學工業與資訊管理學會系主任暨資訊管理研究所所長推選委員會公開徵求第十七任系主任所長候選人 公告
+主旨：國立成功大學工業與資訊管理學系系主任暨資訊管理研究所所長推選委員會公開徵求第十七任系主任所長候選人 公告
 
  
 
-一. 工業與資訊管理學會暨資訊管理研究所（以下簡稱本系所）依據「國立成功大學管理學院工業與資訊管理學會系主任暨資訊管理研究所所長推選、續聘及解聘辦法」，自即日起公開徵求本系所新任系主任所長候選人。
+一. 工業與資訊管理學系暨資訊管理研究所（以下簡稱本系所）依據「國立成功大學管理學院工業與資訊管理學系系主任暨資訊管理研究所所長推選、續聘及解聘辦法」，自即日起公開徵求本系所新任系主任所長候選人。
 
 二. 本系所新任系主任所長任期自107年2月1日起至110年1月31日止，得連任一次。
 
@@ -30,6 +30,6 @@ author: csim
 
 國立成功大學
 
-工業與資訊管理學會系主任暨資訊管理研究所所長推選委員會 
+工業與資訊管理學系系主任暨資訊管理研究所所長推選委員會 
 
 中華民國106年10月16日
