--- a/_posts/2017-11-04-8129.md
+++ b/_posts/2017-11-04-8129.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "國立臺東大學資訊管理學會誠徵專任教師公告"
+title: "國立臺東大學資訊管理學系誠徵專任教師公告"
 date: 2017-11-04 12:19
 categories: 資訊管理學會
 author: csim
 ---
 
-主旨：國立臺東大學資訊管理學會誠徵專任教師公告
+主旨：國立臺東大學資訊管理學系誠徵專任教師公告
 
  
 
