--- a/_posts/2021-01-07-8173.md
+++ b/_posts/2021-01-07-8173.md
@@ -1,11 +1,11 @@
 ---
 layout: posts
-title: "輔仁大學資訊管理學會 誠徵 專案教學人員"
+title: "輔仁大學資訊管理學系 誠徵 專案教學人員"
 date: 2021-01-07 17:05
 categories: 學校
 author: csim
 ---
 
-輔仁大學資訊管理學會 誠徵 專案教學人員職稱：專案教學人員(助理教授(含)以上)學歷：博士名額：2名收件截止日：即日起至110.2.20為止起聘年月：110學年第1學期任教科目：1.      人工智慧、深度學習、資料庫管理、資料通訊與網路           等2.      數位金融、區塊鏈、雲端應用平台等應具備要件：一、應聘者應認同且配合輔仁大學辦學精神，以及遵行輔仁 大學所規範之倫理原則。並應參與校方所提供身心靈的教育成長活動，積極融入有所體認與感動且傳遞此價值給學生，共同營造輔仁大學的校園文化與精神。二、具資訊管理(相關)博士學位。三、對教學與研究具高度熱忱，能配合本系授課安排，並具專業課程英文授課能力(每學期至少一門)。四、具科技部計畫或產學合作經驗者尤佳。應繳交資料：一、<http://docs.hr.fju.edu.tw/invite/docu/%E6%95%99%E8%81%B7%E5%93%A1%E5%B1%A5%E6%AD%B7%E8%A1%A8-%E5%B0%88%E4%BB%BB.doc> 本校專任教職員履歷表。二、學歷證件影本(持外國學歷者須完成駐外單位驗證並附中譯文)、教育部教師資格證書影本(無則免附)。三、成績單（含大學及研究所）。四、著作目錄，並附博士論文或三年內具代表性之論文抽印本(或影本)。五、教學、研究、服務及輔導計畫(請列出專長領域及可教授課程)。六、推薦函兩封。其他注意事項：一、信封上請貼上 <http://docs.hr.fju.edu.tw/invite/docu/Cover_Page.pdf> 本校專用封面格式。二、合格者另行通知，未錄取者應徵資料恕不退件，由本校徵才單位逕行銷毀。
+輔仁大學資訊管理學系 誠徵 專案教學人員職稱：專案教學人員(助理教授(含)以上)學歷：博士名額：2名收件截止日：即日起至110.2.20為止起聘年月：110學年第1學期任教科目：1.      人工智慧、深度學習、資料庫管理、資料通訊與網路           等2.      數位金融、區塊鏈、雲端應用平台等應具備要件：一、應聘者應認同且配合輔仁大學辦學精神，以及遵行輔仁 大學所規範之倫理原則。並應參與校方所提供身心靈的教育成長活動，積極融入有所體認與感動且傳遞此價值給學生，共同營造輔仁大學的校園文化與精神。二、具資訊管理(相關)博士學位。三、對教學與研究具高度熱忱，能配合本系授課安排，並具專業課程英文授課能力(每學期至少一門)。四、具科技部計畫或產學合作經驗者尤佳。應繳交資料：一、<http://docs.hr.fju.edu.tw/invite/docu/%E6%95%99%E8%81%B7%E5%93%A1%E5%B1%A5%E6%AD%B7%E8%A1%A8-%E5%B0%88%E4%BB%BB.doc> 本校專任教職員履歷表。二、學歷證件影本(持外國學歷者須完成駐外單位驗證並附中譯文)、教育部教師資格證書影本(無則免附)。三、成績單（含大學及研究所）。四、著作目錄，並附博士論文或三年內具代表性之論文抽印本(或影本)。五、教學、研究、服務及輔導計畫(請列出專長領域及可教授課程)。六、推薦函兩封。其他注意事項：一、信封上請貼上 <http://docs.hr.fju.edu.tw/invite/docu/Cover_Page.pdf> 本校專用封面格式。二、合格者另行通知，未錄取者應徵資料恕不退件，由本校徵才單位逕行銷毀。
 
-郵寄地址：「24205 新北市新莊區中正路510號輔仁大學人事室收」聯絡人：羅淑貞電話：(02)2905-2940輔仁大學資訊管理學會碩士班24205新北市新莊區中正路510號Tel:02-29052940Fax:02-29052182Email:013763@mail.fju.edu.tw
+郵寄地址：「24205 新北市新莊區中正路510號輔仁大學人事室收」聯絡人：羅淑貞電話：(02)2905-2940輔仁大學資訊管理學系碩士班24205新北市新莊區中正路510號Tel:02-29052940Fax:02-29052182Email:013763@mail.fju.edu.tw
