--- a/_posts/2021-09-14-8183.md
+++ b/_posts/2021-09-14-8183.md
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title: " 【誠徵專案／專任教師】輔仁大學資訊管理學會 誠徵 專案／專任助理教授(含)以上教師"
+title: " 【誠徵專案／專任教師】輔仁大學資訊管理學系 誠徵 專案／專任助理教授(含)以上教師"
 date: 2021-09-14 20:43
 categories: 學校
 author: csim
