--- a/_posts/2021-11-01-8186.md
+++ b/_posts/2021-11-01-8186.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徵才資訊延長公告】國立中正大學管理學院徵求資訊管理學會系主任候選人啟事"
+title: "【徵才資訊延長公告】國立中正大學管理學院徵求資訊管理學系系主任候選人啟事"
 date: 2021-11-01 16:58
 categories: 學校
 author: csim
 ---
 
-國立中正大學管理學院徵求資訊管理學會系主任候選人啟事
+國立中正大學管理學院徵求資訊管理學系系主任候選人啟事
 
 (第1次延長公告)
 
@@ -42,4 +42,4 @@ author: csim
 
  
 
-國立中正大學管理學院資訊管理學會系主任遴選委員會　敬啟
+國立中正大學管理學院資訊管理學系系主任遴選委員會　敬啟
