--- a/_posts/2021-11-15-8187.md
+++ b/_posts/2021-11-15-8187.md
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title: "【徵才資訊延長公告】國立中正大學管理學院徵求資訊管理學會系主任候選人啟事第二次延長公告"
+title: "【徵才資訊延長公告】國立中正大學管理學院徵求資訊管理學系系主任候選人啟事第二次延長公告"
 date: 2021-11-15 14:33
 categories: 學校
 author: csim
