--- a/_posts/2021-12-01-8189.md
+++ b/_posts/2021-12-01-8189.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徵才資訊】輔仁大學資訊管理學會 誠徵 助理教授(含)以上專任／專案教師（即日起至110年12月31日止）"
+title: "【徵才資訊】輔仁大學資訊管理學系 誠徵 助理教授(含)以上專任／專案教師（即日起至110年12月31日止）"
 date: 2021-12-01 10:42
 categories: 學校
 author: csim
 ---
 
-輔仁大學資訊管理學會 誠徵 助理教授(含)以上專任/專案教師（即日起至110年12月31日止）
+輔仁大學資訊管理學系 誠徵 助理教授(含)以上專任/專案教師（即日起至110年12月31日止）
 
 職稱：專案/專任助理教授(含)以上學歷：博士名額：2起聘時間：111學年度第1學期起收件截止日：110年12月31日任教科目：1.數位金融、區塊鏈、雲端運算、人工智慧、資訊系統專題、資管相關課程；2.程式設計、大數據分析、數位行銷、教育科技、資訊系統專題、資管相關課程。應具備要件：一、應聘者應認同且配合輔仁大學辦學精神，以及遵行輔仁大學所規範之倫理原則。並應參與校方所提供身心靈的教育成長活動，積極融入有所體認與感動且傳遞此價值給學生，共同營造輔仁大學的校園文化與精神。二、具資訊管理(相關)博士學位。
 
