--- a/_posts/2021-12-28-8197.md
+++ b/_posts/2021-12-28-8197.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徵才公告】國立勤益科技大學資訊管理學會誠徵專案教師公告"
+title: "【徵才公告】國立勤益科技大學資訊管理學系誠徵專案教師公告"
 date: 2021-12-28 11:21
 categories: 學校
 author: csim
 ---
 
-國立勤益科技大學資訊管理學會誠徵專案教師公告
+國立勤益科技大學資訊管理學系誠徵專案教師公告
 
  
 
