--- a/_posts/2021-12-28-8198.md
+++ b/_posts/2021-12-28-8198.md
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title: "【徵才公告】國立嘉義大學資訊管理學會誠徵專任助理教授(含)以上教師1名"
+title: "【徵才公告】國立嘉義大學資訊管理學系誠徵專任助理教授(含)以上教師1名"
 date: 2021-12-28 11:28
 categories: 學校
 author: csim
@@ -8,7 +8,7 @@ author: csim
 
 國立嘉義大學徵聘專任教師啟事
 
-聘用單位 :管理學院資訊管理學會 
+聘用單位 :管理學院資訊管理學系 
 
 擬聘職稱及名額:專任助理教授(含)以上教師 1 名 
 
