--- a/_posts/2022-02-09-8201.md
+++ b/_posts/2022-02-09-8201.md
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title: "【徵才公告】國立聯合大學資訊管理學會誠徵專任助理教授一名"
+title: "【徵才公告】國立聯合大學資訊管理學系誠徵專任助理教授一名"
 date: 2022-02-09 15:23
 categories: 資訊管理學會
 author: csim
@@ -8,7 +8,7 @@ author: csim
 
 
 
-國立聯合大學資訊管理學會　　　
+國立聯合大學資訊管理學系　　　
 
 誠徵專任助理教授一名
 
@@ -62,6 +62,6 @@ author: csim
 
 本系徵才網站：http://www.im.nuu.edu.tw(link is external)。
 
-寄送地址：36003苗栗市恭敬里聯大一號/國立聯合大學 資訊管理學會黃貞芬系主任收(請註明應徵教師)
+寄送地址：36003苗栗市恭敬里聯大一號/國立聯合大學 資訊管理學系黃貞芬系主任收(請註明應徵教師)
 
 聯絡人：黃貞芬主任、許小姐 聯絡電話：037-381500、381501 email: im@nuu.edu.tw
