--- a/_posts/2022-03-03-8203.md
+++ b/_posts/2022-03-03-8203.md
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title: "【徵才公告】國立嘉義大學徵聘資訊管理學會教師"
+title: "【徵才公告】國立嘉義大學徵聘資訊管理學系教師"
 date: 2022-03-03 16:03
 categories: 學校
 author: csim
@@ -16,7 +16,7 @@ author: csim
 
 
 
-管理學院資訊管理學會
+管理學院資訊管理學系
 
 
 
@@ -134,7 +134,7 @@ author: csim
 
 
 
-「600嘉義市新民路580號管理學院資訊管理學會  收」
+「600嘉義市新民路580號管理學院資訊管理學系  收」
 
 信封請註明「應徵專任教職」，並以掛號寄出。
 
