--- a/_posts/2022-03-03-8204.md
+++ b/_posts/2022-03-03-8204.md
@@ -1,15 +1,15 @@
 ---
 layout: posts
-title: "【徵才公告】國立中正大學徵聘資訊管理學會教師"
+title: "【徵才公告】國立中正大學徵聘資訊管理學系教師"
 date: 2022-03-03 16:07
 categories: 資訊管理學會
 author: csim
 ---
 
-國立中正大學資訊管理學會誠徵教師
+國立中正大學資訊管理學系誠徵教師
 
-【管理組】一、誠徵專任或專案助理教授(含)以上。二、名額：1名（含）以上。三、聘期：自112年2月1日起聘。四、資格：具國內外資訊管理領域之博士學位。五、專長：資訊管理(需英文授課)。六、應徵方式：意者請將最高學歷畢業證書影本、履歷表、代表作（最多三篇）、成績單及三封推薦信郵寄至「嘉義縣民雄鄉621大學路168號 國立中正大學資訊管理學會收」。請於信封處備註應徵資訊管理教師。七、申請截止日：111年5月30日止（以郵戳為憑）八、備註(1)依本校性別平等教育法第27條第4項規定，須辦理性侵害犯罪紀錄查詢。(2)新進教師一學年至少開一門英文教學課程【技術組】
+【管理組】一、誠徵專任或專案助理教授(含)以上。二、名額：1名（含）以上。三、聘期：自112年2月1日起聘。四、資格：具國內外資訊管理領域之博士學位。五、專長：資訊管理(需英文授課)。六、應徵方式：意者請將最高學歷畢業證書影本、履歷表、代表作（最多三篇）、成績單及三封推薦信郵寄至「嘉義縣民雄鄉621大學路168號 國立中正大學資訊管理學系收」。請於信封處備註應徵資訊管理教師。七、申請截止日：111年5月30日止（以郵戳為憑）八、備註(1)依本校性別平等教育法第27條第4項規定，須辦理性侵害犯罪紀錄查詢。(2)新進教師一學年至少開一門英文教學課程【技術組】
 
-一、誠徵專任或專案助理教授(含)以上。二、名額：1名（含）以上。三、聘期：自112年2月1日起聘。四、資格：具國內外資訊科學相關領域之博士學位。五、專長：資訊科學相關領域(需英文授課)。六、應徵方式：意者請將最高學歷畢業證書影本、履歷表、代表作（最多三篇）、成績單及三封推薦信郵寄至「嘉義縣民雄鄉621大學路168號 國立中正大學資訊管理學會」。請於信封處備註應徵資訊科技教師。七、申請截止日：111年5月30日止（以郵戳為憑）八、備註(1)依本校性別平等教育法第27條第4項規定，須辦理性侵害犯罪紀錄查詢。(2)新進教師一學年至少開一門英文教學課程
+一、誠徵專任或專案助理教授(含)以上。二、名額：1名（含）以上。三、聘期：自112年2月1日起聘。四、資格：具國內外資訊科學相關領域之博士學位。五、專長：資訊科學相關領域(需英文授課)。六、應徵方式：意者請將最高學歷畢業證書影本、履歷表、代表作（最多三篇）、成績單及三封推薦信郵寄至「嘉義縣民雄鄉621大學路168號 國立中正大學資訊管理學系」。請於信封處備註應徵資訊科技教師。七、申請截止日：111年5月30日止（以郵戳為憑）八、備註(1)依本校性別平等教育法第27條第4項規定，須辦理性侵害犯罪紀錄查詢。(2)新進教師一學年至少開一門英文教學課程
 
 聯絡資訊電話：05-2720411轉24601，沈小姐。傳真：05-2721501e-mail：admswt@ccu.edu.tw
