--- a/_posts/2022-03-05-8205.md
+++ b/_posts/2022-03-05-8205.md
@@ -42,7 +42,7 @@ International Conference on Information Management 2022
 
 協辦單位：臺北科技大學資訊與財金學系
 
-實踐大學資訊管理學會
+實踐大學資訊管理學系
 
                 實踐大學資訊科技與通訊學系
 
