--- a/_posts/2022-04-20-8210.md
+++ b/_posts/2022-04-20-8210.md
@@ -22,7 +22,7 @@ author: csim
 
 
 
-4. 聯絡人：實踐大學資訊科技與管理學系系辦 陳柏叡 mis@g2.usc.edu.tw｜02-25381111分機8811主辦單位：中華民國資訊管理學會承辦單位：實踐大學資訊科技與管理學系協辦單位：臺北科技大學資訊與財金學系高雄科技大學資訊管理系(所)、電子商務碩士班實踐大學資訊管理學會實踐大學資訊科技與通訊學系實踐大學資訊模擬與設計學系指導單位： 
+4. 聯絡人：實踐大學資訊科技與管理學系系辦 陳柏叡 mis@g2.usc.edu.tw｜02-25381111分機8811主辦單位：中華民國資訊管理學會承辦單位：實踐大學資訊科技與管理學系協辦單位：臺北科技大學資訊與財金學系高雄科技大學資訊管理系(所)、電子商務碩士班實踐大學資訊管理學系實踐大學資訊科技與通訊學系實踐大學資訊模擬與設計學系指導單位： 
 
 
 
