--- a/_posts/2022-07-25-8218.md
+++ b/_posts/2022-07-25-8218.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徵才公告】國立東華大學資訊管理學會徵聘專任(案)教師一名"
+title: "【徵才公告】國立東華大學資訊管理學系徵聘專任(案)教師一名"
 date: 2022-07-25 14:36
 categories: 學校
 author: csim
 ---
 
-【徵才】國立東華大學資訊管理學會徵聘專任(案)教師一名
+【徵才】國立東華大學資訊管理學系徵聘專任(案)教師一名
 
 徵才資訊網址：https://im.ndhu.edu.tw/files/14-1036-157348,r121-1.php?Lang=zh-tw
 
@@ -64,7 +64,7 @@ author: csim
 
  八、聯絡方式：
 
-    （1）收件人：國立東華大學資訊管理學會 系教評委員會 收
+    （1）收件人：國立東華大學資訊管理學系 系教評委員會 收
 
     （2）收件地址：974301 花蓮縣壽豐鄉大學路二段一號
 
