--- a/_posts/2022-08-10-8221.md
+++ b/_posts/2022-08-10-8221.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徵才公告】輔仁大學資訊管理學會 誠徵 助理教授級(含)以上專任／專案教學人員（至111年9月2日）"
+title: "【徵才公告】輔仁大學資訊管理學系 誠徵 助理教授級(含)以上專任／專案教學人員（至111年9月2日）"
 date: 2022-08-10 18:17
 categories: 學校
 author: csim
 ---
 
-輔仁大學資訊管理學會 誠徵 助理教授級(含)以上專任/專案教學人員（至111年9月2日）
+輔仁大學資訊管理學系 誠徵 助理教授級(含)以上專任/專案教學人員（至111年9月2日）
 
 公告資訊網址：https://reurl.cc/W1r4WO
 
