--- a/_posts/2022-09-05-8225.md
+++ b/_posts/2022-09-05-8225.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徵才公告】國立高雄大學資訊管理學會擬誠徵專任教師1名"
+title: "【徵才公告】國立高雄大學資訊管理學系擬誠徵專任教師1名"
 date: 2022-09-05 21:00
 categories: 學校
 author: csim
 ---
 
- 國立高雄大學資訊管理學會誠徵專任教師1名
+ 國立高雄大學資訊管理學系誠徵專任教師1名
 
 一、擬聘任職稱：專任助理教授(含)以上乙名
 
