--- a/_posts/2022-09-08-8226.md
+++ b/_posts/2022-09-08-8226.md
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title: "【徵才公告】國立東華大學資訊管理學會徵聘專任(案)教師一名 (第二次公告)"
+title: "【徵才公告】國立東華大學資訊管理學系徵聘專任(案)教師一名 (第二次公告)"
 date: 2022-09-08 21:29
 categories: 資訊管理學會
 author: csim
@@ -60,7 +60,7 @@ author: csim
 
  八、聯絡方式：
 
-    （1）收件人：國立東華大學資訊管理學會 系教評委員會 收
+    （1）收件人：國立東華大學資訊管理學系 系教評委員會 收
 
     （2）收件地址：974301 花蓮縣壽豐鄉大學路二段一號
 
