--- a/_posts/2022-11-16-8229.md
+++ b/_posts/2022-11-16-8229.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徴聘公告】國立東華大學資訊管理學會徴聘專任(案)教師 "
+title: "【徴聘公告】國立東華大學資訊管理學系徴聘專任(案)教師 "
 date: 2022-11-16 10:54
 categories: 學校
 author: csim
 ---
 
-【徴聘公告】國立東華大學資訊管理學會徴聘專任(案)教師
+【徴聘公告】國立東華大學資訊管理學系徴聘專任(案)教師
 
 一、誠徵助理教授(含)以上之專任(案)師資。
 
@@ -62,7 +62,7 @@ author: csim
 
  八、聯絡方式：
 
-    （1）收件人：國立東華大學資訊管理學會 系教評委員會 收
+    （1）收件人：國立東華大學資訊管理學系 系教評委員會 收
 
     （2）收件地址：974301 花蓮縣壽豐鄉大學路二段一號
 
