--- a/_posts/2023-07-02-8243.md
+++ b/_posts/2023-07-02-8243.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徵聘公告】國立東華大學資訊管理學會徵聘專任(案)教師一名 (延長收件截止日)"
+title: "【徵聘公告】國立東華大學資訊管理學系徵聘專任(案)教師一名 (延長收件截止日)"
 date: 2023-07-02 08:11
 categories: 學校
 author: csim
 ---
 
-【徵聘公告】國立東華大學資訊管理學會徵聘專任(案)教師一名 (延長收件截止日)
+【徵聘公告】國立東華大學資訊管理學系徵聘專任(案)教師一名 (延長收件截止日)
 
 一、誠徵助理教授(含)以上之專任(案)師資。
 
@@ -52,7 +52,7 @@ author: csim
 
      9.其他有利審查資料。
 
-     10.資訊管理學會應聘專任教師基本履歷表(如附件2)：請下載附件檔，填妥資料後
+     10.資訊管理學系應聘專任教師基本履歷表(如附件2)：請下載附件檔，填妥資料後
 
           e-mail至fen@gms.ndhu.edu.tw，主旨請註明【應徵教師_姓名○○○】
 
@@ -64,7 +64,7 @@ author: csim
 
  八、聯絡方式：
 
-    （1）收件人：國立東華大學資訊管理學會 系教評委員會 收
+    （1）收件人：國立東華大學資訊管理學系 系教評委員會 收
 
     （2）收件地址：974301 花蓮縣壽豐鄉大學路二段一號
 
