--- a/_posts/2023-10-11-8247.md
+++ b/_posts/2023-10-11-8247.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "國立成功大學公開徵求工業與資訊管理學會系主任暨資訊管理研究所所長候選人公告"
+title: "國立成功大學公開徵求工業與資訊管理學系系主任暨資訊管理研究所所長候選人公告"
 date: 2023-10-11 14:23
 categories: 學校
 author: csim
 ---
 
-國立成功大學工業與資訊管理學會系主任暨資訊管理研究所所長
+國立成功大學工業與資訊管理學系系主任暨資訊管理研究所所長
 
 推選委員會
 
@@ -14,7 +14,7 @@ author: csim
 
  
 
-一、工業與資訊管理學會暨資訊管理研究所（以下簡稱本系所）依據「國立成功大學管理學院工業與資訊管理學會系主任暨資訊管理研究所所長推選、續聘及解聘辦法」，自即日起公開
+一、工業與資訊管理學系暨資訊管理研究所（以下簡稱本系所）依據「國立成功大學管理學院工業與資訊管理學系系主任暨資訊管理研究所所長推選、續聘及解聘辦法」，自即日起公開
 
 徵求本系所新任系主任所長候選人。
 
@@ -40,7 +40,7 @@ author: csim
 
 國立成功大學
 
-工業與資訊管理學會系主任暨資訊管理研究所所長推選委員會
+工業與資訊管理學系系主任暨資訊管理研究所所長推選委員會
 
 中華民國 112 年 10 月 2 日
 
