--- a/_posts/2024-01-03-8254.md
+++ b/_posts/2024-01-03-8254.md
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title: "【徵聘公告】國立東華大學資訊管理學會徵聘專任(案)教師 1 名"
+title: "【徵聘公告】國立東華大學資訊管理學系徵聘專任(案)教師 1 名"
 date: 2024-01-03 17:04
 categories: 學校
 author: csim
@@ -50,7 +50,7 @@ author: csim
 
      9.其他有利審查資料。
 
-     10.資訊管理學會應聘專任教師基本履歷表(如附件2)：請下載附件檔，填妥資料後
+     10.資訊管理學系應聘專任教師基本履歷表(如附件2)：請下載附件檔，填妥資料後
 
           e-mail至fen@gms.ndhu.edu.tw，主旨請註明【應徵教師_姓名○○○】
 
@@ -62,7 +62,7 @@ author: csim
 
  八、聯絡方式：
 
-    （1）收件人：國立東華大學資訊管理學會 系教評委員會 收  (信封上請註明:應徵一般教師)
+    （1）收件人：國立東華大學資訊管理學系 系教評委員會 收  (信封上請註明:應徵一般教師)
 
     （2）收件地址：974301 花蓮縣壽豐鄉大學路二段一號
 
