--- a/_posts/2024-02-01-8255.md
+++ b/_posts/2024-02-01-8255.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徵才】國立成功大學工業與資訊管理學會誠徵專任教師(延至113年3月1日截止)"
+title: "【徵才】國立成功大學工業與資訊管理學系誠徵專任教師(延至113年3月1日截止)"
 date: 2024-02-01 19:26
 categories: 學校
 author: csim
 ---
 
-國立成功大學工業與資訊管理學會誠徵專任教師
+國立成功大學工業與資訊管理學系誠徵專任教師
 
 【徵才公告】
 
@@ -50,7 +50,7 @@ author: csim
 
 八、    應徵者請依序裝訂上述資料，並於截止日期前以掛號寄達紙本文件：
 
-『70101台南市大學路1號  國立成功大學工業與資訊管理學會  教師評審委員會收』
+『70101台南市大學路1號  國立成功大學工業與資訊管理學系  教師評審委員會收』
 
 系辦公室聯絡人：游小姐 Tel：06-2757575轉53700
 
