--- a/_posts/2024-03-05-8256.md
+++ b/_posts/2024-03-05-8256.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徵才】國立臺東大學資訊管理學會徵聘專任教師1名(收件至3／31)"
+title: "【徵才】國立臺東大學資訊管理學系徵聘專任教師1名(收件至3／31)"
 date: 2024-03-05 10:14
 categories: 學校
 author: csim
 ---
 
-【徵聘公告】國立臺東大學資訊管理學會徵聘專任教師1名
+【徵聘公告】國立臺東大學資訊管理學系徵聘專任教師1名
 
 。國立臺東大學位於臺東市大學路、鄰近知本溫泉，
 
