--- a/_posts/2018-04-24-8141.md
+++ b/_posts/2018-04-24-8141.md
@@ -18,6 +18,6 @@ author: csim
 
 【會議地點】中國文化大學推廣教育部B1國際會議廳台北市大安區建國南路二段231號 
 
-【會議組織】大會主席：中國文化大學商學院 吳青松 院長 大會副主席：中國文化大學推廣教育部 呂新科 教育長●主辦單位：中國文化大學商學院、中國文化大學推廣教育部●承辦單位：中國文化大學推廣教育部、中國文化大學資訊管理學會、中國文化大學資訊工程學系、中國文化大學資訊傳播學系、中國文化大學國際企業管理學系、中國文化大學數位媒體學士學位學程、中國文化大學廣告系進修學士班、中國文化大學觀光休閒事業碩士在職專班、中國文化大學華語文教學碩士學位學程、澳門境外碩士在職專班●協辦學校：南京大學、上海復旦大學管理學院、 閩江學院海峽學院、University of Central Arkansas 
+【會議組織】大會主席：中國文化大學商學院 吳青松 院長 大會副主席：中國文化大學推廣教育部 呂新科 教育長●主辦單位：中國文化大學商學院、中國文化大學推廣教育部●承辦單位：中國文化大學推廣教育部、中國文化大學資訊管理學系、中國文化大學資訊工程學系、中國文化大學資訊傳播學系、中國文化大學國際企業管理學系、中國文化大學數位媒體學士學位學程、中國文化大學廣告系進修學士班、中國文化大學觀光休閒事業碩士在職專班、中國文化大學華語文教學碩士學位學程、澳門境外碩士在職專班●協辦學校：南京大學、上海復旦大學管理學院、 閩江學院海峽學院、University of Central Arkansas 
 
 【聯絡資訊】研討會秘書組：conference@hkxf.org洽詢電話：02-27005858#8552、8562研討會網址：http://www.icimkc.org研討會EDM：http://www.sce.pccu.edu.tw/event/2018/20171122135/fb臉書 iCIMKC粉絲團：https://www.facebook.com/icimkc/fb臉書 iCIMKC社團：https://www.facebook.com/groups/icimkc/
