--- a/_posts/2019-01-11-8151.md
+++ b/_posts/2019-01-11-8151.md
@@ -122,7 +122,7 @@ The 30th International Conference on Information Management 2019
 
 【聯絡資訊】             
 
-承辦單位：輔仁大學資訊管理學會                     
+承辦單位：輔仁大學資訊管理學系                     
 
 聯絡地址：新北市新莊區中正路510號利瑪竇大樓LM306         
 
