--- a/_posts/2020-05-02-8169.md
+++ b/_posts/2020-05-02-8169.md
@@ -16,4 +16,4 @@ author: csim
 
 第二階段投稿審查(暫定)論文截稿日期：2020 年 11 月 01 日論文審稿結果通知：2020年 11 月 17 日註冊繳費時間：2020 年 11 月 17 日～ 11 月 24 日會議召開日期：2020 年 12 月 12 日研討會網站:https://icim2020.mis.ncyu.edu.tw/
 
-主辦單位： 中華民國資訊管理學會承辦單位： 國立嘉義大學資訊管理學會指導與贊助單位： 行政院 科技部協辦單位： 國立嘉義大學管理學院                       國立嘉義大學企業管理學系                       國立嘉義大學行銷與觀光管理學系                       國立嘉義大學全英文授課觀光暨管理碩士學位學程 
+主辦單位： 中華民國資訊管理學會承辦單位： 國立嘉義大學資訊管理學系指導與贊助單位： 行政院 科技部協辦單位： 國立嘉義大學管理學院                       國立嘉義大學企業管理學系                       國立嘉義大學行銷與觀光管理學系                       國立嘉義大學全英文授課觀光暨管理碩士學位學程 
