--- a/_posts/2021-09-20-8184.md
+++ b/_posts/2021-09-20-8184.md
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title: "【徴聘公告】國立東華大學資訊管理學會 徴聘專任(案)教師"
+title: "【徴聘公告】國立東華大學資訊管理學系 徴聘專任(案)教師"
 date: 2021-09-20 09:30
 categories: 學校
 author: csim
@@ -58,7 +58,7 @@ author: csim
 
 八、聯絡方式：
 
-    （1）收件人：國立東華大學資訊管理學會 系教評委員會 收
+    （1）收件人：國立東華大學資訊管理學系 系教評委員會 收
 
     （2）收件地址：974301 花蓮縣壽豐鄉大學路二段一號
 
