--- a/_posts/2021-10-01-8185.md
+++ b/_posts/2021-10-01-8185.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徵才資訊】國立中正大學管理學院徵求資訊管理學會系主任候選人啟事"
+title: "【徵才資訊】國立中正大學管理學院徵求資訊管理學系系主任候選人啟事"
 date: 2021-10-01 16:48
 categories: 學校
 author: csim
 ---
 
-國立中正大學管理學院徵求資訊管理學會系主任候選人啟事
+國立中正大學管理學院徵求資訊管理學系系主任候選人啟事
 
  
 
