--- a/_posts/2021-12-01-8188.md
+++ b/_posts/2021-12-01-8188.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徵才資訊】國立中正大學管理學院徵求資訊管理學會系主任候選人啟事  (第3次延長公告)"
+title: "【徵才資訊】國立中正大學管理學院徵求資訊管理學系系主任候選人啟事  (第3次延長公告)"
 date: 2021-12-01 10:39
 categories: 學校
 author: csim
 ---
 
-國立中正大學管理學院徵求資訊管理學會系主任候選人啟事
+國立中正大學管理學院徵求資訊管理學系系主任候選人啟事
 
 (第3次延長公告)
 
