--- a/_posts/2022-02-14-8202.md
+++ b/_posts/2022-02-14-8202.md
@@ -1,12 +1,12 @@
 ---
 layout: posts
-title: "【徵才公告】國立中正大學管理學院徵求資訊管理學會系主任候選人啟事  (第6次延長公告)"
+title: "【徵才公告】國立中正大學管理學院徵求資訊管理學系系主任候選人啟事  (第6次延長公告)"
 date: 2022-02-14 17:01
 categories: 學校
 author: csim
 ---
 
-國立中正大學管理學院徵求資訊管理學會系主任候選人啟事
+國立中正大學管理學院徵求資訊管理學系系主任候選人啟事
 
 (第6次延長公告)
 
@@ -40,4 +40,4 @@ author: csim
 
  
 
-國立中正大學管理學院資訊管理學會系主任遴選委員會　敬啟
+國立中正大學管理學院資訊管理學系系主任遴選委員會　敬啟
