Add TOC function

--- a/pages/關於學會/組織章程.md
+++ b/pages/關於學會/組織章程.md
@@ -1,5 +1,5 @@
 ---
-layout: pages
+layout: pages_TOC
 title:  "中華民國資訊管理學會章程"
 permalink: /about/組織章程
 ---
@@ -116,7 +116,7 @@ permalink: /about/組織章程
 
 第二十七條、本會得設榮譽理事及顧問若干人，其聘期與理事、監事之任期同。榮譽理事為曾任三屆以上之理監事，由理事長徵求同意提名之，經理事會通過聘任 (榮譽理事不得超過理事名額，顧問不得超過理事名額之三分之一) 。
  
-第四章 會議
+## 第四章 會議
  
 第二十八條、會員(會員代表)大會分定期會議與臨時會議兩種，由理事長召集，召集時除緊急事故之臨時會議外應於十五日前以書面通知之。定期會議每年召開一次，臨時會議於理事會認為必要，或經會員（會員代表）十分之一以上之請求，或監事會函請召集時召開之。
  
@@ -133,7 +133,7 @@ permalink: /about/組織章程
  
 第三十二條、理事監事應出席理事監事會議，理事會監事會不得委託出席。理事監事連續兩次無故缺席理事會監事會者，視同辭職。
  
-第五章 經費及會計
+## 第五章 經費及會計
  
 第三十三條、會經費來源如下
  - 一、入會費：各類會員(除名譽會員外)入會時應一次繳納，入會費(以新台幣計)如下：學生會員壹百元其他會員伍百元。
