update English page, update markdown settings, fix typo in membership page, and update TOC layout

--- a/pages/關於學會/入會簡介.md
+++ b/pages/關於學會/入會簡介.md
@@ -4,7 +4,7 @@ title:  "入會簡介"
 permalink: /about/入會
 ---
 
-### 申請入會申請入會及會費說明：
+### 申請入會及會費說明：
 
 1. 本學會秘書處即日起將在學會網站公告會員清查與補繳會費事宜，並個別通知未繳費補繳會費或補登錄會員資料(失聯會員)等作業，若逾期未補繳或登錄會員資料時，將彙集名單送理監事聯席會議審理停權事。  
 2. 停權後，會員可隨時繳費或補錄資料，以回復會員各項權利。(依97.12.13中華民國資訊管理學會第十屆第八次理監事聯席會議決議辦理)  
