--- a/pages/關於學會/監理事會.md
+++ b/pages/關於學會/監理事會.md
@@ -9,288 +9,79 @@ permalink: /about/監理事會
   
 #### 理事長
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">姓名</th>
-      <th scope="col">簡歷</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>蕭瑞祥</td>
-      <td>淡江大學資訊管理學系 教授兼總務</td>
-    </tr>
-  </tbody>
-</table>
+{: .table}
+| #   | 姓名    | 簡歷                             |
+| --- | ------- | -------------------------------- |
+| 1   | 蕭瑞祥  | 淡江大學資訊管理學系 教授兼總務     |
 
 #### 常務理事 (6席)
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">姓名</th>
-      <th scope="col">簡歷</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>廖則竣</td>
-      <td>銘傳大學資訊管理學系 教授</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>翁頌舜</td>
-      <td>國立臺北科技大學資訊與財金管理系 教授</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>黃明達</td>
-      <td>淡江大學資訊管理學系 榮譽教授</td>
-    </tr>
-    <tr>
-      <th scope="row">4</th>
-      <td>廖文華</td>
-      <td>國立臺北商業大學資訊與決策科學研究所 教授兼所長</td>
-    </tr>
-    <tr>
-      <th scope="row">5</th>
-      <td>王貞淑</td>
-      <td>國立臺北科技大學資訊與財金管理系 教授兼副教務長</td>
-    </tr>
-    <tr>
-      <th scope="row">6</th>
-      <td>林宜隆</td>
-      <td>大同大學資訊工程學系 教授</td>
-    </tr>
-  </tbody>
-</table>
+{: .table}
+| #   | 姓名    | 簡歷                                           |
+| --- | ------- | ----------------------------------------------- |
+| 1   | 廖則竣  | 銘傳大學資訊管理學系 教授                         |
+| 2   | 翁頌舜  | 國立臺北科技大學資訊與財金管理系 教授             |
+| 3   | 黃明達  | 淡江大學資訊管理學系 榮譽教授                     |
+| 4   | 廖文華  | 國立臺北商業大學資訊與決策科學研究所 教授兼所長     |
+| 5   | 王貞淑  | 國立臺北科技大學資訊與財金管理系 教授兼副教務長     |
+| 6   | 林宜隆  | 大同大學資訊工程學系 教授                         |
 
-  
-#### 常務監事 (1席) 
+#### 常務監事 (1席)
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">姓名</th>
-      <th scope="col">簡歷</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>余強生</td>
-      <td>實踐大學資訊科技與管理學系 教授</td>
-    </tr>
-  </tbody>
-</table>
+{: .table}
+| #   | 姓名    | 簡歷                                   |
+| --- | ------- | --------------------------------------- |
+| 1   | 余強生  | 實踐大學資訊科技與管理學系 教授           |
 
+#### 理事 (14席)
 
-#### 理事 (14席) 
+{: .table}
+| #   | 姓名    | 簡歷                                             |
+| --- | ------- | ------------------------------------------------- |
+| 1   | 游張松  | 國立台灣大學工商管理學系暨商學研究所教授             |
+| 2   | 徐國鈞  | 國立臺北商業大學資訊管理學系 副教授兼資訊與網路中心主任 |
+| 3   | 陳振東  | 國立聯合大學資訊管理學系 教授                       |
+| 4   | 施東河  | 國立雲林科技大學資訊管理學系教授兼管理學院院長       |
+| 5   | 汪志堅  | 國立台北大學資訊管理研究所 特聘教授                 |
+| 6   | 黃正魁  | 國立中正大學企業管理學系 教授兼研究發展處企劃服務組組長 |
+| 7   | 江志卿  | 國立東華大學資訊管理學系副教授兼校務研究辦公室研究分析組組長 |
+| 8   | 林豪鏘  | 國立臺南大學數位學習科技學系 教授兼系主任           |
+| 9   | 楊亨利  | 國立政治大學資訊管理學系 教授                       |
+| 10  | 林至中  | 銘傳大學資訊管理學系 教授兼系主任                   |
+| 11  | 羅濟群  | 國立交通大學資訊管理研究所 兼任教授                 |
+| 12  | 張宏義  | 國立嘉義大學資訊管理學系 教授兼系主任               |
+| 13  | 朱惠中  | 華梵大學資訊管理學系 特聘教授                     |
+| 14  | 古政元  | 國立陽明交通大學資訊管理研究所 教授                 |
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">姓名</th>
-      <th scope="col">簡歷</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>游張松</td>
-      <td>國立台灣大學工商管理學系暨商學研究所教授</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>徐國鈞</td>
-      <td>國立臺北商業大學資訊管理學系 副教授兼資訊與網路中心主任</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>陳振東</td>
-      <td>國立聯合大學資訊管理學系 教授</td>
-    </tr>
-    <tr>
-      <th scope="row">4</th>
-      <td>施東河</td>
-      <td>國立雲林科技大學資訊管理學系教授兼管理學院院長</td>
-    </tr>
-    <tr>
-      <th scope="row">5</th>
-      <td>汪志堅</td>
-      <td>國立台北大學資訊管理研究所 特聘教授</td>
-    </tr>
-    <tr>
-      <th scope="row">6</th>
-      <td>黃正魁</td>
-      <td>國立中正大學企業管理學系 教授兼研究發展處企劃服務組組長</td>
-    </tr>
-    <tr>
-      <th scope="row">7</th>
-      <td>江志卿</td>
-      <td>國立東華大學資訊管理學系副教授兼校務研究辦公室研究分析組組長</td>
-    </tr>
-    <tr>
-      <th scope="row">8</th>
-      <td>林豪鏘</td>
-      <td>國立臺南大學數位學習科技學系 教授兼系主任</td>
-    </tr>
-    <tr>
-      <th scope="row">9</th>
-      <td>楊亨利</td>
-      <td>國立政治大學資訊管理學系 教授</td>
-    </tr>
-    <tr>
-      <th scope="row">10</th>
-      <td>林至中</td>
-      <td>銘傳大學資訊管理學系 教授兼系主任</td>
-    </tr>
-    <tr>
-      <th scope="row">11</th>
-      <td>羅濟群</td>
-      <td>國立交通大學資訊管理研究所 兼任教授</td>
-    </tr>
-    <tr>
-      <th scope="row">12</th>
-      <td>張宏義</td>
-      <td>國立嘉義大學資訊管理學系 教授兼系主任</td>
-    </tr>
-    <tr>
-      <th scope="row">13</th>
-      <td>朱惠中</td>
-      <td>華梵大學資訊管理學系 特聘教授</td>
-    </tr>
-    <tr>
-      <th scope="row">14</th>
-      <td>古政元</td>
-      <td>國立陽明交通大學資訊管理研究所 教授</td>
-    </tr>
-  </tbody>
-</table>
+#### 監事 (6席)
 
+{: .table}
+| #   | 姓名    | 簡歷                                             |
+| --- | ------- | ------------------------------------------------- |
+| 1   | 陶蓓麗  | 國立嘉義大學資訊管理學系 教授                       |
+| 2   | 蘇致遠  | 嘉南藥理大學多媒體與遊戲發展系教授兼系主任           |
+| 3   | 楊建民  | 國立政治大學資訊管理學系 兼任教授                   |
+| 4   | 廖奕雯  | 國立高雄科技大學智慧商務系副教授                   |
+| 5   | 林東清  | 東海大學資訊管理學系 教授                         |
+| 6   | 張銀益  | 輔仁大學資訊管理學系 副教授                       |
 
-#### 監事 (6席) 
+#### 候補理事 (7席)
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">姓名</th>
-      <th scope="col">簡歷</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>陶蓓麗</td>
-      <td>國立嘉義大學資訊管理學系 教授</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>蘇致遠</td>
-      <td>嘉南藥理大學多媒體與遊戲發展系教授兼系主任</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>楊建民</td>
-      <td>國立政治大學資訊管理學系 兼任教授</td>
-    </tr>
-    <tr>
-      <th scope="row">4</th>
-      <td>廖奕雯</td>
-      <td>國立高雄科技大學智慧商務系副教授</td>
-    </tr>
-    <tr>
-      <th scope="row">5</th>
-      <td>林東清</td>
-      <td>東海大學資訊管理學系 教授</td>
-    </tr>
-    <tr>
-      <th scope="row">6</th>
-      <td>張銀益</td>
-      <td>輔仁大學資訊管理學系 副教授</td>
-    </tr>
-  </tbody>
-</table>
+{: .table}
+| #   | 姓名    | 簡歷                                           |
+| --- | ------- | ----------------------------------------------- |
+| 1   | 劉忠峰  | 奇美醫療財團法人奇美醫院醫學中心/AI中心主任     |
+| 2   | 陳宇佐  | 國立聯合大學資訊管理學系助理教授                 |
+| 3   | 洪新原  | 國立中正大學資訊管理學系 教授兼教務長             |
+| 4   | 黃興進  | 國立陽明交通大學資訊管理研究所 教授               |
+| 5   | 吳金山  | 東海大學資訊管理學系 教授兼EMBA主任             |
+| 6   | 張碩毅  | 國立中正大學會計與資訊科技學系 教授兼管理學院院長 |
+| 7   | 李有仁  | 國立中正大學資訊管理學系講座教授兼全球企業電子化中心主任 |
 
+#### 候補監事 (2席)
 
-#### 候補理事 (7席) 
-
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">姓名</th>
-      <th scope="col">簡歷</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>劉忠峰</td>
-      <td>奇美醫療財團法人奇美醫院醫學中心/AI中心主任</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>陳宇佐</td>
-      <td>國立聯合大學資訊管理學系助理教授</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>洪新原</td>
-      <td>國立中正大學資訊管理學系 教授兼教務長</td>
-    </tr>
-    <tr>
-      <th scope="row">4</th>
-      <td>黃興進</td>
-      <td>國立陽明交通大學資訊管理研究所 教授</td>
-    </tr>
-    <tr>
-      <th scope="row">5</th>
-      <td>吳金山</td>
-      <td>東海大學資訊管理學系 教授兼EMBA主任</td>
-    </tr>
-    <tr>
-      <th scope="row">6</th>
-      <td>張碩毅</td>
-      <td>國立中正大學會計與資訊科技學系 教授兼管理學院院長</td>
-    </tr>
-    <tr>
-      <th scope="row">7</th>
-      <td>李有仁</td>
-      <td>國立中正大學資訊管理學系講座教授兼全球企業電子化中心主任</td>
-    </tr>
-  </tbody>
-</table>
-
-
-#### 候補監事 (2席) 
-
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">姓名</th>
-      <th scope="col">簡歷</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>蕭　鉢</td>
-      <td>國立雲林科技大學資訊管理系 教授兼系主任</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>蕭文龍</td>
-      <td>長庚大學資訊管理學系 教授</td>
-    </tr>
-  </tbody>
-</table>
+{: .table}
+| #   | 姓名    | 簡歷                                     |
+| --- | ------- | ----------------------------------------- |
+| 1   | 蕭　鉢  | 國立雲林科技大學資訊管理系 教授兼系主任   |
+| 2   | 蕭文龍  | 長庚大學資訊管理學系 教授                 |
